--- a/.github/workflows/profile.yml
+++ b/.github/workflows/profile.yml
@@ -33,7 +33,7 @@ jobs:
           plugin_languages_details: lines, percentage
           plugin_languages_indepth: yes
           plugin_languages_analysis_timeout: 30
-          plugin_languages_skipped: ovenlife
+          plugin_languages_skipped: ovenlife, OvelnNotes
           # plugin_anilist: yes
           # plugin_anilist_user: Stalo
           # plugin_anilist_sections: characters
